fix layout shift pour les éléments clickables

--- a/gymnastique-2/public/css/style.css
+++ b/gymnastique-2/public/css/style.css
@@ -87,6 +87,7 @@ header{
     bottom: 0;
     min-height: 100%;
     transform: translate(-50%, 0%);
+    font-size: 0;
 }
 
 .background > *{
